force-app/main/default/objects/HFS_Outcome__c/HFS_Outcome__c.object-meta.xml
<CustomObject>
    <description>Observed result of an executed action.</description>
    <label>Outcome</label>
    <nameField>
        <displayFormat>OUT-{000000}</displayFormat>
        <label>Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>