force-app/main/default/objects/HFS_Outcome__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Action</label>
    <referenceTo>HFS_Action__c</referenceTo>
    <relationshipLabel>Outcomes by Action</relationshipLabel>
    <relationshipName>HFS_Outcome_Action</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>