force-app/main/default/objects/HFS_Outcome__c/fields/Metric_Key__c.field-meta.xml
<CustomField>
    <fullName>Metric_Key__c</fullName>
    <label>Metric Key</label>
    <length>160</length>
    <type>Text</type>
</CustomField>