force-app/main/default/objects/HFS_Outcome__c/fields/Metric_Value__c.field-meta.xml
<CustomField>
    <fullName>Metric_Value__c</fullName>
    <label>Metric Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>