force-app/main/default/objects/HFS_Outcome__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>