force-app/main/default/objects/HFS_Outcome__c/fields/Source_Event__c.field-meta.xml
<CustomField>
    <fullName>Source_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Event</label>
    <referenceTo>HFS_Event__c</referenceTo>
    <relationshipLabel>Outcomes by Source Event</relationshipLabel>
    <relationshipName>HFS_Outcome_Source_Event</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>