force-app/main/default/objects/HFS_Outcome__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OBSERVED</fullName>
                <label>Observed</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>PARTIAL</fullName>
                <label>Partial</label>
            </value>
            <value>
                <fullName>NO_EFFECT</fullName>
                <label>No Effect</label>
            </value>
            <value>
                <fullName>NEGATIVE</fullName>
                <label>Negative</label>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>